room cards prnting with correct IDs and names. need to get grid laid out and functioning, then to assign clickevents

--- a/InsertKnife.ui/insert-knife/src/Styles/index.scss
+++ b/InsertKnife.ui/insert-knife/src/Styles/index.scss
@@ -7,6 +7,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  .card {
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin: 25px;
+  }
 }
 
 code {
