--- a/InsertKnife.ui/insert-knife/src/Components/Board/Board.scss
+++ b/InsertKnife.ui/insert-knife/src/Components/Board/Board.scss
@@ -9,9 +9,9 @@
 
     
   }
-  .card {
-    margin: 10px;
-    height: 200px;
-    width: 200px;
-  }
+  // .card {
+  //   margin: 10px;
+  //   height: 200px;
+  //   width: 200px;
+  // }
 }
