pausing for the night. laptop needs a break. still need to get ids turned into names (just add the column to your database dummy) and get the guess component working

--- a/InsertKnife.ui/insert-knife/src/Components/GuessCard/guessCard.scss
+++ b/InsertKnife.ui/insert-knife/src/Components/GuessCard/guessCard.scss
@@ -8,3 +8,15 @@
 .btn {
   margin: 5px
 }
+.guessTable{
+  font-weight: bold;
+  border-style: groove;
+  .wrongo {
+    text-decoration-line: line-through;
+    color: darkred;
+  }
+  
+  .yougotitdude {
+    color: darkgreen;
+  }
+}
