--- a/InsertKnife.ui/insert-knife/src/Components/Board/Board.scss
+++ b/InsertKnife.ui/insert-knife/src/Components/Board/Board.scss
@@ -7,7 +7,9 @@
   .row {
     justify-content: center;
 
-    
+    .guessTable {
+      max-width: 400px;
+    }
   }
   // .card {
   //   margin: 10px;
