--- a/InsertKnife.ui/insert-knife/src/Components/GuessCard/guessCard.scss
+++ b/InsertKnife.ui/insert-knife/src/Components/GuessCard/guessCard.scss
@@ -8,9 +8,15 @@
 .btn {
   margin: 5px
 }
-.guessTable{
+.guessTable {
   font-weight: bold;
   border-style: groove;
+  th {
+    font-size: 1.2em;
+  }
+  tr {
+    font-size: .9em;
+  }
   .wrongo {
     text-decoration-line: line-through;
     color: darkred;
