--- a/InsertKnife.ui/insert-knife/src/Components/Board/Board.scss
+++ b/InsertKnife.ui/insert-knife/src/Components/Board/Board.scss
@@ -11,9 +11,12 @@
       max-width: 400px;
     }
   }
-  // .card {
-  //   margin: 10px;
-  //   height: 200px;
-  //   width: 200px;
-  // }
+  .roomCard {
+    min-height: 180px;
+    margin: 20px;
+  }
+
+  .guessCard {
+    height: auto;
+  }
 }
