MVP BAYBEEEEEEEE. got a bunch of buttons and a bunch of api calls nd currently no errors so I'm gonna go to sleep before I fuck it all up.

--- a/InsertKnife.ui/insert-knife/src/Components/Board/Board.scss
+++ b/InsertKnife.ui/insert-knife/src/Components/Board/Board.scss
@@ -9,6 +9,14 @@
 
     .guessTable {
       max-width: 400px;
+      .checked {
+        font-size: 1em;
+        color: darkgreen;
+      }
+      .wrecked {
+        text-decoration-line: line-through;
+        color: darkred;
+      }
     }
   }
   .roomCard {
